--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u filipzytka --password-stdin
 
       - name: Pull Postgres Docker Image
-        run: docker pull postgres:16
+        run: docker pull postgres:latest
 
       - name: Pull ASP.NET CORE Image from Github packages
         run: docker pull ghcr.io/filipzytka/hermes:latest
@@ -33,8 +33,7 @@ jobs:
             -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
             -e POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -p 5432:5432 \
-            postgres:16
-
+            postgres:latest
       - name: Wait for Postgres to be available
         run: |
           until docker exec postgres pg_isready -h localhost -p 5432; do
@@ -63,6 +62,13 @@ jobs:
             -e VALIDATION_TOKEN="${{ secrets.VALIDATION_TOKEN }}" \
             -p 8080:8080 \
             ghcr.io/filipzytka/hermes:latest
+      - name: Wait for ASP.NET Backend to be available
+        run: |
+          until curl -s http://localhost:8080; do
+            echo "Waiting for ASP.NET Backend to be available..."
+            sleep 1
+          done
+        shell: bash
 
       - uses: actions/checkout@v2
       - name: Setup Node
