--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u filipzytka --password-stdin
 
       - name: Pull Postgres Docker Image
-        run: docker pull postgres:16
+        run: docker pull postgres:latest
 
       - name: Pull ASP.NET CORE Image from Github packages
-        run: docker pull ghcr.io/filipzytka/hermes:latest
+        run: docker pull filipus01/hermes-server:latest
 
       - name: Create Docker Network
         run: docker network create hermes-network
@@ -33,8 +33,7 @@ jobs:
             -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
             -e POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -p 5432:5432 \
-            postgres:16
-
+            postgres:latest
       - name: Wait for Postgres to be available
         run: |
           until docker exec postgres pg_isready -h localhost -p 5432; do
@@ -62,7 +61,7 @@ jobs:
             -e ADMIN_PASSWORD="${{ secrets.ADMIN_PASSWORD }}" \
             -e VALIDATION_TOKEN="${{ secrets.VALIDATION_TOKEN }}" \
             -p 8080:8080 \
-            ghcr.io/filipzytka/hermes:latest
+            filipus01/hermes-server:latest
 
       - name: Wait for ASP.NET Backend to be available
         run: |
